# 0bt

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  0bt.conf.example  Dockerfile  Dockerfile.railway  README.md  README.rst  cleanup.py  config.py  docker-compose.yaml  fhost.py  install.py  install.sh  nsfw_detect.py  pyproject.toml  railway-deploy.py  railway.json  requirements.txt  wsgi.py
app/: __init__.py  config.py  main.py  models.py  retention.py  storage.py  torrents.py  tracker.py
deploy/caddy/: Caddyfile
deploy/railway/: bt-bridge.sh  start.sh  supervisord.conf
docs/: deploy-hetzner.md
migrations/: env.py  script.py.mako
migrations/versions/: 0cd36ecdd937_.py  7e246705da6a_.py  d8eb42d4866b_.py
nsfw_model/: LICENSE.md
scripts/: acceptance.sh  bootstrap-vps.sh  prune.py  railway-deploy.py  railway-watch.py  swarm-test-railway.sh  swarm-test.sh
templates/: nginx.conf.tmpl
tests/: conftest.py  test_basic.py  test_tracker.py
