
[tool]
[tool.poetry]
name = "0bt"
version = "0.2.0"
description = "A tool for creating torrents and magnet links automatically from command line file uploads. Based on 0x0"
authors = ["@mia@nazrin.moe", "Travis Briggs <audiodude@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.9"
alembic = "==1.4.2"
certifi = "==2020.4.5.1"
chardet = "==3.0.4"
click = "==7.1.1"
decorator = "==4.4.2"
flask = "==1.1.2"
flask-migrate = "==2.5.3"
flask-script = "==2.0.6"
flask-sqlalchemy = "==2.4.1"
flatbencode = "==0.2.1"
humanize = "==2.3.0"
idna = "==2.9"
itsdangerous = "==1.1.0"
jinja2 = "==2.11.2"
mako = "==1.1.2"
markupsafe = "==1.1.1"
numpy = "==1.18.2"
python-dateutil = "==2.8.1"
python-editor = "==1.0.4"
python-magic = "==0.4.15"
requests = "==2.23.0"
short-url = "==1.2.2"
six = "==1.14.0"
sqlalchemy = "==1.3.16"
torf = "==3.0.1"
tqdm = "==4.45.0"
urllib3 = "==1.25.8"
validators = "==0.14.3"
werkzeug = "==1.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
