[project]
name = "0bt"
version = "2.0.0"
description = "No-bullshit file host with auto BitTorrent magnet generation. Fork of 0x0."
requires-python = ">=3.11"
authors = [
  { name = "Travis Briggs", email = "audiodude@gmail.com" },
  { name = "Martin Herkt", email = "lachs0r@srsfckn.biz" },
]
license = { text = "EUPL-1.2" }
dependencies = [
  "flask>=3.0,<4",
  "flask-sqlalchemy>=3.1,<4",
  "sqlalchemy>=2.0,<3",
  "gunicorn>=22,<24",
  "torf>=4.2,<5",
  "transmission-rpc>=7.0,<8",
  "python-magic>=0.4.27,<0.5",
  "humanize>=4.9,<5",
  "short-url>=1.2.2,<2",
  "validators>=0.22,<1",
  "psycopg[binary]>=3.1,<4",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-flask>=1.3,<2",
  "ruff>=0.4,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
